--- a/primid/src/main/webapp/src/modules/Timeline/timeline2.tpl.html
+++ b/primid/src/main/webapp/src/modules/Timeline/timeline2.tpl.html
@@ -6,9 +6,9 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" href="resources/css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="resources/css/style.css"> <!-- Resource style -->
+	<script src="resources/js/modernizr.js"></script> <!-- Modernizr -->
 
 	<title>Timeline</title>
 </head>
@@ -21,7 +21,7 @@
 	<a href="agregar.tpl.html" class="view-project">Agregar Evento al Timeline<i class="fa fa-search-plus fa-2x"></i></a>
             <div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/cd-icon-picture.svg" alt="Picture">
+				<img src="resources/img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
