--- a/primid/src/main/webapp/src/modules/Timeline/timeline2.tpl.html
+++ b/primid/src/main/webapp/src/modules/Timeline/timeline2.tpl.html
@@ -1,21 +1,6 @@
-<!doctype html>
-<html lang="en" class="no-js">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-
-	<link rel="stylesheet" href="resources/css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="resources/css/style.css"> <!-- Resource style -->
-	<script src="resources/js/modernizr.js"></script> <!-- Modernizr -->
-
-	<title>Timeline</title>
-</head>
-<body>
-	<header>
-		<h1>Timeline</h1>
-	</header>
+        <div class="container features center">
+        <h1>Timeline</h1>
 
 	<section id="cd-timeline" class="cd-container">
 	<a href="agregar.tpl.html" class="view-project">Agregar Evento al Timeline<i class="fa fa-search-plus fa-2x"></i></a>
@@ -102,7 +87,5 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 	</section> <!-- cd-timeline -->
+        </div>
 
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-</body>
-</html>
