--- a/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
+++ b/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
@@ -1,3 +1,5 @@
+
+<div class="container features center">
 <div class="row porfolio-container">
 				<div class="col-md-10 col-md-offset-1 center section-title">
 					<h3>Multimedia</h3>
@@ -168,4 +170,5 @@
                                             </span>
                                     </a>
                             </div>
+</div>
 <!--==== MailChimp Widget plugin ====-->
