--- a/primid/src/main/webapp/src/modules/mapa/mapa.tpl.html
+++ b/primid/src/main/webapp/src/modules/mapa/mapa.tpl.html
@@ -1,5 +1,5 @@
-<section id="section-pricing" class="pricing-wrap">
-	<div class="container pricing">
+
+	<div div class="container features center">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 center section-title">
 					<h3>Mapa</h3>
@@ -16,4 +16,3 @@
 			</div>
 
 	</div>
-</section>
