--- a/primid/src/main/webapp/src/modules/viajero/viajero.tpl.html
+++ b/primid/src/main/webapp/src/modules/viajero/viajero.tpl.html
@@ -1,39 +1,38 @@
-<div class="section-overlay"></div>
-		<div class="container contact animated" data-animation="flipInY" data-animation-delay="1000">
-			<div class="row">
-				<div class="col-md-6  col-md-offset-6">
+<div id="sectionViajero" class="home-section-wrap center">
+            <div class="section-overlay">
 
-                                        <div class="col-md-10 col-md-offset-1 center section-title">
-					<div class="col-md-0 step-img">
-						<img src="resources/images/profile.jpg" class="img-circle profile">
-						</div>
-						<h4>Pepito Perez {{record.name}}</h4>
-					</div>
+            </div>
+            <div class="container home">
+                <div class="row">
 
-					<form class="contact-form support-form center">
+                    <h1 class="well-come">Bienvenido, Juan</h1>
+                    <div class="col-md-10 col-md-offset-1 center section-title">
+                    <div class="col-md-0 step-img">
+                            <img src="resources/images/profile.jpg" class="img-circle profile">
+                            </div>
+                            <h4>Pepito Perez </h4>
+                    </div>
 
-						<div class="col-lg-12">
-							<label><input id="name" class="input-field form-item field-name" type="text" required="required" name="contact-name" placeholder="Pepito Perez" /> {{record.name}}</label>
-							<label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /> {{record.email}}</label>
+                    <form class="contact-form support-form center">
 
-						</div>
-						<button type="submit" class="fancy-button button-line button-orange subform center">
-							Editar cuenta
-							<span class="icon">
-								<i class="fa fa-file-o"></i>
-							</span>
-						</button>
-						<button type="submit" class="fancy-button button-line button-orange subform center">
-							Editar Foto
-							<span class="icon">
-								<i class="fa fa-file-o"	></i>
-							</span>
-						</button>
-					</form>
+                            <div class="col-lg-12">
+                                    <label><input id="name" class="input-field form-item field-name" type="text" required="required" name="contact-name" placeholder="Pepito Perez" /> </label>
+                                    <label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /> </label>
 
-			</div>
-
-		</div>
+                            </div>
+                            <button type="submit" class="fancy-button button-line button-orange subform center">
+                                    Editar cuenta
+                                    <span class="icon">
+                                            <i class="fa fa-file-o"></i>
+                                    </span>
+                            </button>
+                            <button type="submit" class="fancy-button button-line button-orange subform center">
+                                    Editar Foto
+                                    <span class="icon">
+                                            <i class="fa fa-file-o"	></i>
+                                    </span>
+                            </button>
+                    </form>
+            </div>
 	</div>
-
-
+    </div>
