--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -4,11 +4,10 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Primid</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="resources/css/bootstrap.css" />
 <link rel="stylesheet" href="resources/css/bootstrap.min.css" />
 <link rel="stylesheet" href="resources/css/font-awesome.min.css" />
@@ -68,7 +67,7 @@
                                                                     <span class="icon-bar"></span>
                                                     </button>
                                                     <!--=== Site Name ===-->
-                                                    <a class="site-name navbar-brand" href="#"><span>P</span>rimid</a>
+                                                    <a class="site-name navbar-brand" href="#"><span>P</span>primid</a>
                                             </div>
 
                                             <!-- Main Navigation menu Starts -->
@@ -164,12 +163,6 @@
 <script src="resources/js/angular.min.js" type="text/javascript"></script>
 <script src="resources/js/angular-ui-router.min.js" type="text/javascript"></script>
 <script src="src/app.js" type="text/javascript"></script>
-
-<!-- se gregan todas los archivos JavaScript de cada modulo que necesita el index.-->
-<script src="src/modules/book/book.mod.js" type="text/javascript"></script>
-<script src="src/modules/book/book.ctrl.js" type="text/javascript"></script>
-<script src="src/modules/book/book.svc.js" type="text/javascript"></script>
-<script src="src/modules/book/book.mock.js" type="text/javascript"></script>
 
 <script type="text/javascript" src="resources/js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
