--- a/primid/src/main/webapp/src/modules/evento/evento1.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento1.tpl.html
@@ -1,16 +1,11 @@
 <!DOCTYPE HTML>
-        <div id="bx-pager" class="client-photos">
-            <a data-slide-index="0" href="" class="photo-hold">
-		<span class="photo-bg">
-                    <img src="resources/images/client_1.jpg" alt="" /> <!-- Client photo 1 -->
-		</span>
-            </a>
-	</div>
 
 
+<section class="container features center">
 	<div class="container">
 		<div class="portfolio-project">
 			<div class="row">
+
 				<div class="col-md-10 col-md-offset-1 center section-title">
 					<h4>Detalles del evento</h4>
 				</div>
@@ -18,19 +13,18 @@
 					<ul id="card-ul" class="features-hold baraja-container">
 
 							<!-- Single Feature Starts -->
-							<li class="single-feature" title="Card style">
-								<img src="resources/images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme center">Paris</h4>
-								<p class="feature-text center">
-									Imagen del evento el cual se quiere observar el detalle
+							<li class="single-feature" title="Feature heading" style="">
+								<img src="resources/images/88.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Dubai9</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
-
-									<a href="#" class="fancy-button center button-line btn-col small vertical ">
-										<span class="icon">
-											<i class="fa fa-leaf"></i>
-										</span>
-									</a>
-
+								<a ui-sref="evento" class="fancy-button button-line btn-col small zoom">
+									Volver
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
 							</li>
                                         </ul>
 				</div>
@@ -54,7 +48,7 @@
 
                                 </div>
                                 <div class="home-buttons">
-                                    <a ui-sref="evento" class="backToProject fancy-button button-line bell btn-col">
+                                    <a ui-sref="itinerario" class="backToProject fancy-button button-line bell btn-col">
                                         Agregar a mi itinerario
                                             <span class="icon">
                                                 <i class="fa fa-arrow-circle-o-up"></i>
@@ -65,4 +59,6 @@
 			</div>
 		</div>
 	</div>
+
+</section>
 
