--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -127,11 +127,11 @@
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Feature heading" style="">
 								<img src="resources/images/88.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Dubai7</h4>
+								<h4 class="feature-title color-scheme">Dubai9</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
+								<a ui-sref="eventoInfo" class="fancy-button button-line btn-col small zoom">
 									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
